# OpenCL-example

./: CMakeLists.txt  README.md  vadd_chain.cl  vcpkg.json
.github/workflows/: test.yml
benchmark/: bm_matmul.cpp  results.json  resultsasdf.json
scripts/: plot.ipynb  requirements.txt
src/myproject/: util.hpp
src/opencl-example/: matmul.cl  matmul.cpp  matmul.hpp  utils.hpp
tests/: test_matmul.cpp  test_myproject.cpp
